[gd_scene load_steps=2 format=3 uid="uid://c442mbbeujhsx"]

[ext_resource type="Script" path="res://scripts/arrow_set.gd" id="1_fvgxl"]

[node name="Sprite2D" type="Sprite2D"]
script = ExtResource("1_fvgxl")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -522.0
offset_top = -137.0
offset_right = -482.0
offset_bottom = -97.0

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = -461.0
offset_top = -137.0
offset_right = -421.0
offset_bottom = -97.0

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = -522.0
offset_top = -76.0
offset_right = -482.0
offset_bottom = -36.0

[node name="TextureRect4" type="TextureRect" parent="."]
offset_left = -461.0
offset_top = -76.0
offset_right = -421.0
offset_bottom = -36.0

[node name="Label" type="Label" parent="."]
offset_left = -480.0
offset_top = -114.0
offset_right = -451.0
offset_bottom = -87.0

[node name="Label2" type="Label" parent="."]
offset_left = -419.0
offset_top = -114.0
offset_right = -390.0
offset_bottom = -87.0

[node name="Label3" type="Label" parent="."]
offset_left = -480.0
offset_top = -53.0
offset_right = -451.0
offset_bottom = -26.0

[node name="Label4" type="Label" parent="."]
offset_left = -419.0
offset_top = -53.0
offset_right = -390.0
offset_bottom = -26.0
